--- a/src/core/Header/style.css
+++ b/src/core/Header/style.css
@@ -1,14 +1,18 @@
-nav {
+nav.header {
     background-color: #ffffff;
     box-shadow: 0px 0px 10px #e6e3e3;
     display: flex;
     justify-content: space-between;
     padding: 6px;
+    z-index: 2;
+    /* position: fixed;
+    width: 100%;
+    right: 0px; */
 }
 .logo-section {
-    width: 10%;
+    width: 200px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 .center-content{
