--- a/src/core/Sidebar/style.css
+++ b/src/core/Sidebar/style.css
@@ -4,18 +4,18 @@ nav.sidebar{
     margin: 3px 0px;
     min-height: 100vh;
 }
-ul {
+.sidebar ul {
     list-style-type:none;
     color: #a19d9d;
     margin: 0px;
     padding: 0px;
 }
-li {
+.sidebar li {
     padding: 10px 24px;
     display: flex;
     align-items: center;
 }
-li img  {
+.sidebar li img  {
     padding: 0px 10px;
     margin: 5px 0px;
 }
